[gd_scene load_steps=6 format=3 uid="uid://bpmbvqjcb8m6n"]

[ext_resource type="Script" path="res://Scripts/Collectable.gd" id="1_xkdvv"]
[ext_resource type="AudioStream" uid="uid://d2ai8bhpwcp2q" path="res://Audio/Pickup_coin 18.wav" id="2_nblng"]

[sub_resource type="CylinderMesh" id="CylinderMesh_tcphn"]
height = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0b8cn"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_k3v3q"]
height = 0.2

[node name="CoinCollectable" type="Area3D"]
collision_layer = 4
script = ExtResource("1_xkdvv")

[node name="Coin2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_nblng")
volume_db = 5.0

[node name="Coin" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.00746999, -0.999972, 0, 0.999972, -0.00746999, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_tcphn")
surface_material_override/0 = SubResource("StandardMaterial3D_0b8cn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-0.0249905, -0.999688, 0, 0.999688, -0.0249905, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CylinderShape3D_k3v3q")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="item_collected" from="." to="." method="_on_item_collected"]
